<resources>
    <string name="app_name">找美女</string>
    <string name="joining_channel">正在进入频道&#8230;</string>
    <string name="content_desc"></string>
    <string name="test_video_restart">Restart</string>
    <string name="test_video_pause">Pause</string>
    <string name="file_downloading">文件下载中</string>
    <string name="kindly_tip">温馨提示</string>
    <string name="network_tip">你正处于2G/3G网络下，耗费流量较大，建议WIFI下观看</string>
    <string name="network_disconnect_tips">无网络链接，请检查您的网络情况！</string>
    <string name="stay_watch">继续观看</string>
    <string name="cancel">取消</string>
    <string name="live">直播</string>
    <string name="livelist">节目列表</string>
    <string name="message">消息</string>
    <string name="ask">咨询</string>
    <string name="my">我</string>
    <string name="login_yy">登录YY帐号</string>
    <string name="login">登录</string>
    <string name="str_img_again">看不清换一张</string>
    <string name="register">注册帐号</string>
    <string name="password">密码</string>
    <string name="new_account">新帐号</string>
    <string name="picture_code">验证码</string>
    <string name="str_noIdentifyCode">请输入验证码</string>
    <string name="str_picture_code">输入验证码</string>
    <string name="password_with_space">密 码</string>
    <string name="register_now">立即注册</string>
    <string name="new_account_error">帐号应由4-16位小写字母与数字组合，请重新输入</string>
    <string name="new_password_error">密码应为6-20位字母、数字与符号，区分大小写，请重新输入</string>
    <string name="new_account_requirement">4-16位，由小写字母、数字组合</string>
    <string name="new_password_requirement">6-20位字母、数字与符号，区分大小写</string>
    <string name="pic_code_describe">右侧图片点击可更换</string>
    <string name="register_agreement">点击上面的“立即注册”按钮，即表示您同意《YY医药软件许可及服务协议》</string>
    <string name="register_error">注册失败……，请重新尝试</string>
    <string name="register_input_pic_code">请输入验证码</string>
    <string name="register_succeed">注册成功</string>
    <string name="register_time_out">请求超时，请稍后在试</string>
    <string name="register_succeed_and_loading">注册成功，登录中</string>
    <string name="register_params_error">用户名或密码无效</string>
    <string name="register_pic_code_error">验证码错误</string>
    <string name="register_registered_error">该账户已被注册</string>
    <string name="login_error">帐号或密码错误，请重新输入</string>
    <string name="add_contact">添加好友/群</string>
    <string name="buddy_detail">详细资料</string>
    <string name="forum_detail">群资料</string>
    <string name="search_buddy">搜索号码添加好友</string>
    <string name="input_buddy_uid">输入YY号</string>
    <string name="search_forum">添加群</string>
    <string name="input_forum_uid">输入群号</string>
    <string name="add_self_as_buddy">不能添加自己为好友</string>
    <string name="buddy_searching">查找中</string>
    <string name="invalid_imid">查询不到Y友信息</string>
    <string name="have_been_friend">你们已经是好友</string>
    <string name="add_buddy">加为好友</string>
    <string name="buddy_adding">处理中</string>
    <string name="in_blacklist">已被加入黑名单</string>
    <string name="try_too_much_today">尝试次数过多</string>
    <string name="too_many_friend_for_me">好友列表已满</string>
    <string name="too_many_friend_for_buddy">对方好友列表已满</string>
    <string name="need_more_exp">对方要求你积分达到[%d]才允许添加</string>
    <string name="max_length_character">最多可输入%d个字符</string>
    <string name="fail_to_add_buddy">添加失败</string>
    <string name="buddy_reject_all">对方拒绝添加好友</string>
    <string name="succeed_to_add_friends">添加好友成功</string>
    <string name="enter">确定</string>
    <string name="complete">完成</string>
    <string name="verify_adding_title">对方启用了身份验证</string>
    <string name="verify_adding_message">你需要发送验证申请，对方通过后你才能添加其为好友</string>
    <string name="verify_update_title">保存修改</string>
    <string name="verify_update_success">验证方式修改成功</string>
    <string name="answer_adding_title">请回答TA的验证问题</string>
    <string name="answer_error">回答错误</string>
    <string name="add_info_send">请求发送成功</string>
    <string name="str_add_budy_succ">已成功发送添加好友请求\n如果对方处理了您的请求，我们会发系统消息通知您</string>
    <string name="forum_not_found">查找的Y群不存在</string>
    <string name="add_forum">加入该群</string>
    <string name="forum_already_joined">你已经是该群的成员，无需再次添加</string>
    <string name="forum_disallow_anyone">该群不允许任何人加入</string>
    <string name="join_forum_success">你已成功加入该群</string>
    <string name="join_forum_request_sending">正在发送加群请求</string>
    <string name="join_forum_request_sent">你已经成功发送加群请求。\n如果对方处理了您的请求，我们会发系统消息通知您</string>
    <string name="join_forum_request_fail">加群请求发送失败，请重试...</string>
    <string name="join_forum_failed_need_majia">该群需要指定频道的马甲才能加入</string>
    <string name="forum_need_auth_message">创建人需要验证您的身份，请输入您的验证信息：</string>
    <string name="agree">同意</string>
    <string name="str_imid" formatted="false">YY号：%d</string>
    <string name="str_experience">积分:%d</string>
    <string name="str_level">等级:%d</string>
    <string name="personal_info">帐号</string>
    <string name="female">女</string>
    <string name="male">男</string>
    <string name="str_birth_format" formatted="false">%d年%02d月%02d日</string>
    <string name="choose_site">选择所在地</string>
    <string name="choose_provice">选择省份</string>
    <string name="choose_city">选择城市</string>
    <string name="choose_gender">选择性别</string>
    <string name="account">输入YY帐号</string>
    <string name="signeture">个性签名</string>
    <string name="portrait">头像</string>
    <string name="my_video">我的录制</string>
    <string name="clear_cache">清除缓存</string>
    <string name="name">名字</string>
    <string name="nickname">昵称</string>
    <string name="gender">性别</string>
    <string name="birthday">生日</string>
    <string name="site">所在地</string>
    <string name="imid">YY号</string>
    <string name="level">等级</string>
    <string name="experience">积分</string>
    <string name="yesterday_experience">您昨天在YY医药获赠的积分</string>
    <string name="YB">Y币:</string>
    <string name="flower">鲜花</string>
    <string name="choose_photo">选择照片</string>
    <string name="edit_photo">编辑图片</string>
    <string name="str_upload_portrait_failed">上传头像失败</string>
    <string name="str_upload_portrait_success">上传头像成功</string>
    <string name="str_upload">上传</string>
    <string name="flower_lack">对不起，鲜花数量不足！您还有%d秒就可以获得1朵鲜花！</string>
    <string name="has_no_follow_doctor">您还没有关注过医生</string>
    <string name="str_image_msg">图片消息</string>
    <string name="str_voice_msg">语音消息</string>
    <string name="str_title_edit_nickname">编辑昵称</string>
    <string name="str_title_edit_signature">编辑签名</string>
    <string name="dummy_content_desc">dummy content description</string>
    <string name="remove_account">清除帐号</string>
    <string name="remove_account_message">确定从列表中删除帐号: %s 吗？</string>
    <string name="remove">删除</string>
    <string name="my_video_remove_success">刪除成功</string>
    <string name="my_video_remove_fail">刪除失败</string>
    <string name="my_video_removing">刪除中</string>
    <string name="btn_send">发送</string>
    <string name="chat_photo">照片</string>
    <string name="chat_camera">拍摄</string>
    <string name="str_resent_image_msg">图片发送中</string>
    <string name="str_start_resent_image_msg">重新发送图片</string>
    <string name="str_connect_retry_gentle">网络不太给力哦，正在努力连接中……</string>
    <string name="str_net_connect_error">网络连接失败，请稍后重试</string>
    <string name="logining">登录中</string>
    <string name="contacts">好友</string>
    <string name="button_ok">确定</string>
    <string name="button_cancel">取消</string>
    <string name="passcard">通行证</string>
    <string name="str_delete_from_list">从列表中删除</string>
    <string name="ctx_edit_title">编辑</string>
    <string name="ctx_copy_from_list">复制文本</string>
    <string name="ctx_delete_from_list">删除消息</string>
    <string name="ctx_copy_success_from_list">已复制</string>
    <string name="ctx_del_msg_reminder">确定要删除此消息吗？</string>
    <string name="btn_delete">删除</string>
    <string name="str_delete_from_system_list">删除</string>
    <string name="press_to_record_voice">按住 说话</string>
    <string name="release_to_end">松开 结束</string>
    <string name="fling_up_to_cancel">手指上滑取消发送</string>
    <string name="up_to_cancel">手指松开取消发送</string>
    <string name="voice_canceled">语音信息已取消</string>
    <string name="voice_record_failed">录音出错</string>
    <string name="search_buddy_forum">搜索好友或群</string>
    <string name="search_buddy_forum_tip">未查找到</string>
    <string name="logout">退出当前帐号</string>
    <string name="search_video">请输入您想要咨询的问题</string>
    <string name="search_channel_hint">搜索</string>
    <string name="enter_some_channel">进入频道: %s</string>
    <string name="search_some_channel">搜索直播间: %s</string>
    <string name="recent_search">最近搜索</string>
    <string name="recent_visit">最近访问</string>
    <string name="fmt_room_number">ID: %d</string>
    <string name="fmt_fans">粉丝: %s</string>
    <string name="fmt_flowers">鲜花: %s</string>
    <string name="pay_charge_yb">Y币充值</string>
    <string name="pay_account_money">账户余额</string>
    <string name="pay_type">支付类型</string>
    <string name="pay_type_telephone">手机支付</string>
    <string name="pay_charge_quick">立即充值</string>
    <string name="pay_charging">充值中，请稍候...</string>
    <string name="str_live">直播中</string>
    <string name="str_mychannel">我的频道</string>
    <string name="str_myRMBBag">我的钱包</string>
    <string name="str_RBM_remainder">帐户余额</string>
    <string name="str_myYB">Y币余额</string>
    <string name="str_scanner">扫一扫</string>
    <string name="str_otherchannel">Ta的频道</string>
    <string name="str_other_parttake_channel">Ta的频道</string>
    <string name="str_collection_channel">我的收藏</string>
    <string name="str_recent_channel">最近访问</string>
    <string name="str_chongzhi">充值</string>
    <string name="str_tongB">铜币:</string>
    <string name="str_tongB_release">铜币余额</string>
    <string name="str_YB_release">Y币余额</string>
    <string name="str_my_follow">我的关注</string>
    <string name="str_department">科室</string>
    <string name="record_fail">录制失败</string>
    <string name="tip_stop_record">是否停止录制</string>
    <string name="str_clear">清空</string>
    <string name="menu_sub_channel">切换子频道</string>
    <string name="tip_no_video">暂时没有人在直播哦</string>
    <string name="menu_pause">暂停</string>
    <string name="menu_hook">挂机</string>
    <string name="menu_play">播放</string>
    <string name="str_on_hook">挂机中</string>
    <string name="tip_fobbid_flower">管理员已禁止在公屏赠送鲜花</string>
    <string name="menu_full_screen">全屏</string>
    <string name="menu_audio_only">只听声音</string>
    <string name="menu_audio_only_off">同步视频</string>
    <string name="menu_quit">退出</string>
    <string name="menu_copy">复制</string>
    <string name="menu_url">打开链接</string>
    <string name="title_send_fail">信息发送失败</string>
    <string name="menu_resend">重新发送</string>
    <string name="menu_confirm_channel">点击进入 %d 频道</string>
    <string name="str_channel">频道</string>
    <string name="menu_title_ticket">飞机票</string>
    <string name="expand">展开</string>
    <string name="collapse">收起</string>
    <string name="category">导航</string>
    <string name="str_my_hometown">我的家乡是？</string>
    <string name="str_my_name">我的真实姓名？</string>
    <string name="str_my_game_occupation">我的游戏职业</string>
    <string name="str_my_mobile_number">我的手机号码？</string>
    <string name="role_all">所有成员</string>
    <string name="role_manager">管理员</string>
    <string name="role_normal">普通观众</string>
    <string name="str_count">数量:</string>
    <string name="str_send_gift">赠 送</string>
    <string name="gift_list_loading">礼物加载中</string>
    <string name="gift_list_load_complete">礼物加载完毕</string>
    <string name="gift_list_load_fail">礼物加载失败</string>
    <string name="apply_private_doctor">开通私人医生服务</string>
    <string name="apply_private_doctor_note">开通私人医生即可添加医生为好友，享受一对一的定制化服务，请选择要开通的服务。</string>
    <string name="apply_private_doctor_for_a_week">一 周 500元</string>
    <string name="apply_private_doctor_for_a_month">一个月 1000元</string>
    <string name="apply_private_doctor_for_a_quater">三个月 2888元</string>
    <string name="apply_private_doctor_for_half_year">半年 2888元</string>
    <string name="apply_private_doctor_for_a_year">一年 11688元</string>
</resources>