<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="wrap_content">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/apply_private_doctor"
        android:textSize="20dp"
        android:layout_centerHorizontal="true"
        android:text="@string/apply_private_doctor"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/apply_private_doctor_note"
        android:layout_below="@+id/apply_private_doctor"
        android:textSize="18dp"
        android:textColor="#666666"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_centerHorizontal="true"
        android:text="@string/apply_private_doctor_note"/>
    
    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="44dp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="100dp"
        style="@style/BillButton"
        android:layout_below="@+id/apply_private_doctor_note"
        android:id="@+id/apply_private_doctor_for_a_week"
        android:text="@string/apply_private_doctor_for_a_week"/>
    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="44dp"
        android:layout_marginLeft="100dp"
        style="@style/BillButton"
        android:layout_below="@+id/apply_private_doctor_for_a_week"
        android:id="@+id/apply_private_doctor_for_a_month"
        android:text="@string/apply_private_doctor_for_a_month"/>
    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="44dp"
        android:layout_marginLeft="100dp"
        style="@style/BillButton"
        android:layout_below="@+id/apply_private_doctor_for_a_month"
        android:id="@+id/apply_private_doctor_for_a_quater"
        android:text="@string/apply_private_doctor_for_a_quater"/>
    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="44dp"
        android:layout_marginLeft="100dp"
        style="@style/BillButton"
        android:layout_below="@+id/apply_private_doctor_for_a_quater"
        android:id="@+id/apply_private_doctor_for_half_year"
        android:text="@string/apply_private_doctor_for_half_year"/>
    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="44dp"
        android:layout_marginLeft="100dp"
        style="@style/BillButton"
        android:layout_below="@+id/apply_private_doctor_for_half_year"
        android:id="@+id/apply_private_doctor_for_a_year"
        android:text="@string/apply_private_doctor_for_a_year"/>
</RelativeLayout>