<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="wrap_content" android:layout_height="wrap_content"
              android:background="@null" android:orientation="vertical">

    <LinearLayout android:id="@+id/question1" android:orientation="horizontal"
                  android:layout_width="fill_parent" android:layout_height="@dimen/info_group_height"
                  android:background="@drawable/btn_setting_bg">
        <TextView
                android:layout_width="fill_parent" android:layout_height="fill_parent"
                android:textColor="@color/ids_color_friend_name" android:textSize="@dimen/med_font_size"
                android:gravity="center_vertical"
                android:text="@string/str_my_hometown" android:layout_marginLeft="10dp"/>
    </LinearLayout>
    <LinearLayout android:layout_width="fill_parent"
                  android:layout_height="1dp" android:background="@color/line_color"/>
    <LinearLayout android:id="@+id/question2" android:orientation="horizontal"
                  android:layout_width="fill_parent" android:layout_height="@dimen/info_group_height"
                  android:background="@drawable/btn_setting_bg">
        <TextView
                android:layout_width="fill_parent" android:layout_height="fill_parent"
                android:textColor="@color/ids_color_friend_name" android:textSize="@dimen/med_font_size"
                android:gravity="center_vertical"
                android:text="@string/str_my_game_occupation" android:layout_marginLeft="10dp"/>
    </LinearLayout>
    <LinearLayout android:layout_width="fill_parent"
                  android:layout_height="1dp" android:background="@color/line_color"/>
    <LinearLayout android:id="@+id/question3" android:orientation="horizontal"
                  android:layout_width="fill_parent" android:layout_height="@dimen/info_group_height"
                  android:background="@drawable/btn_setting_bg">
        <TextView
                android:layout_width="fill_parent" android:layout_height="fill_parent"
                android:textColor="@color/ids_color_friend_name" android:textSize="@dimen/med_font_size"
                android:gravity="center_vertical"
                android:text="@string/str_my_name" android:layout_marginLeft="10dp"/>
    </LinearLayout>
    <LinearLayout android:layout_width="fill_parent"
                  android:layout_height="1dp" android:background="@color/line_color"/>
    <LinearLayout android:id="@+id/question4" android:orientation="horizontal"
                  android:layout_width="fill_parent" android:layout_height="@dimen/info_group_height"
                  android:background="@drawable/btn_setting_bg">
        <TextView
                android:layout_width="fill_parent" android:layout_height="fill_parent"
                android:textColor="@color/ids_color_friend_name" android:textSize="@dimen/med_font_size"
                android:gravity="center_vertical"
                android:text="@string/str_my_mobile_number" android:layout_marginLeft="10dp"/>
    </LinearLayout>
</LinearLayout>