<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <ListView
            android:id="@+id/lv_audience"
            android:layout_above="@+id/view_splitter"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:cacheColorHint="@android:color/transparent"
            android:divider="@null"
            android:fadingEdge="none"
            android:background="@color/white"
            android:listSelector="@drawable/selectable_item"
            android:fastScrollEnabled="false"
            android:footerDividersEnabled="true"
            android:headerDividersEnabled="true"
            android:scrollingCache="false"/>
    <View
            android:id="@+id/view_splitter"
            android:layout_above="@+id/rg_role"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/line_grey"/>

    <RadioGroup
            android:id="@id/rg_role"
            android:layout_alignParentBottom="true"
            android:layout_width="match_parent"
            android:layout_height="@dimen/chat_panel_height"
            android:orientation="horizontal">

        <RadioButton
                android:id="@+id/rb_all"
                style="@style/ChannelRoleRadioButton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/role_all"/>
        <RadioButton
                android:id="@+id/rb_manager"
                style="@style/ChannelRoleRadioButton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/role_manager"/>
        <RadioButton
                android:id="@+id/rb_normal"
                style="@style/ChannelRoleRadioButton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/role_normal"/>
    </RadioGroup>

</RelativeLayout>