<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="@dimen/sub_channel_item_height"
                android:paddingRight="14dp"
                android:paddingLeft="14dp"
                android:background="#F7F7F7"
                android:descendantFocusability="blocksDescendants">

    <ImageView
            android:id="@+id/iv_locked"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_lock"
            android:contentDescription="@string/dummy_content_desc"/>

    <ToggleButton
            android:id="@+id/tb_expand_collapse"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:drawableRight="@drawable/btn_subchannel_expand_selector"
            android:drawablePadding="4dp"
            android:gravity="center_vertical|right"
            android:textOff="@string/expand"
            android:textOn="@string/collapse"
            android:textColor="#ECAF9A"
            android:textSize="16sp"
            android:focusable="false"
            android:button="@null"
            android:background="@null"
            />

    <TextView
            android:id="@+id/tv_name"
            android:layout_width="match_parent"
            android:layout_height="@dimen/sub_channel_item_height"
            android:layout_toRightOf="@id/iv_locked"
            android:layout_toLeftOf="@id/tv_online_count"
            android:gravity="center_vertical"
            android:paddingLeft="14dp"
            android:paddingRight="8dp"
            android:singleLine="true"
            android:ellipsize="marquee"
            android:marqueeRepeatLimit="1"
            android:textSize="16sp"
            android:textColor="@color/sub_channel_name_normal"/>
    <TextView
            android:id="@+id/tv_online_count"
            android:layout_width="54sp"
            android:layout_height="wrap_content"
            android:layout_marginRight="54dp"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:drawableLeft="@drawable/ic_online_count"
            android:drawablePadding="2dp"
            android:maxLines="1"
            android:textSize="12sp"
            android:textColor="#6B6B6B"
            />

</RelativeLayout>