<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:background="@drawable/selectable_item_white_bg"
        android:layout_height="43dp"
        android:paddingLeft="15dp"
        android:paddingRight="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:textSize="@dimen/med_font_size"
            android:text="@string/imid" />

        <TextView
            android:id="@+id/tv_imid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/text_gray"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"/>

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/line_color" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:background="@drawable/selectable_item_white_bg"
        android:layout_height="43dp"
        android:paddingLeft="15dp"
        android:paddingRight="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:textSize="@dimen/med_font_size"
            android:text="@string/passcard"/>

        <TextView
            android:id="@+id/tv_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/text_gray"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"/>

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/line_color" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:background="@drawable/selectable_item_white_bg"
        android:layout_height="43dp"
        android:paddingLeft="15dp"
        android:paddingRight="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:textSize="@dimen/med_font_size"
            android:text="@string/level" />

        <TextView
            android:id="@+id/tv_level"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/text_gray"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"/>

        <ImageView
            android:id="@+id/iv_level"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@id/tv_level"
            android:layout_centerVertical="true"/>

    </RelativeLayout>

    <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/line_color"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:background="@drawable/selectable_item_white_bg"
        android:layout_height="43dp"
        android:paddingLeft="15dp"
        android:paddingRight="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:textSize="@dimen/med_font_size"
            android:text="@string/YB"/>

        <TextView
                android:id="@+id/tv_YB"
                android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/text_gray"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"/>

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/line_color" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:background="@drawable/selectable_item_white_bg"
        android:layout_height="43dp"
        android:paddingLeft="15dp"
        android:paddingRight="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:textSize="@dimen/med_font_size"
            android:text="@string/flower"/>

        <TextView
                android:id="@+id/tv_flower"
                android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/text_gray"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"/>

    </RelativeLayout>

    <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/line_color"/>

    <RelativeLayout
            android:layout_width="match_parent"
            android:background="@drawable/selectable_item_white_bg"
            android:layout_height="43dp"
            android:paddingLeft="15dp"
            android:paddingRight="10dp">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:textSize="@dimen/med_font_size"
                android:text="@string/experience"/>

        <TextView
                android:id="@+id/tv_exp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/text_gray"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"/>

    </RelativeLayout>


    <RelativeLayout
            android:layout_width="match_parent"
            android:id="@+id/rl_jifen"
            android:background="@drawable/selectable_item_white_bg"
            android:visibility="gone"
            android:layout_height="43dp"
            android:paddingLeft="15dp"
            android:paddingRight="10dp">

        <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/line_color"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/yesterday_experience"/>

        <TextView
                android:id="@+id/tv_yesterday_exp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/text_gray"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"/>

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/line_color" />

</LinearLayout>